Improvements to the handling of build output with GradleRunner.
- Don't separate stdout and stderr for the output component of the build result
- Have forwardOutput() forward stdout and stderr to the System.out of the client (opposed to splitting)
- Rename to forwardStdOut() and forwardStdErr()
- Don't treat Tooling API connection failures as failed builds
- De-tangle the IO object pieces so that they make sense in isolation
- When forwarding from the build to the clients stdout, don't encode just to decode again (i.e. passthru)
- Polish on the Javadoc and release notes for this feature

+review REVIEW-5654